rusty-cdk-macros/tests/fails/string_for_secret_empty.stderr
error: min allowed length is 1 (was 0)
 --> tests/fails/string_for_secret_empty.rs:5:24
  |
5 |     string_for_secret!("");
  |                        ^^
